Updating the thing

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
   image: appleboy/drone-ssh
   settings:
     host:
-      - from_secret: ssh_host
+      from_secret: ssh_host
     username: 
       from_secret: ssh_user
     password: 
